<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">p5_dialog_shared_prefs</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="change">Cambiar</string>
    <string name="verify">Verificar</string>
    <string name="no_value">NADA</string>
    <string name="no_value_found">NADA GUARDADO</string>
    <string name="shared_pref_1">Preferencia 1</string>
    <string name="shared_pref_2">Preferencia 2</string>
    <string name="shared_pref_3">Preferencia 3</string>

</resources>
