<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.p5_dialog_shared_prefs.MainActivity$PlaceholderFragment"
    xmlns:app="http://schemas.android.com/apk/res/com.example.p5_dialog_shared_prefs">

    <android.support.v7.widget.GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:columnCount="3" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_column="0"
            app:layout_gravity="left|top"
            app:layout_row="0"
            android:text="@string/shared_pref_1" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_gravity="left|top"
            app:layout_row="0"
            android:onClick="changeData"
            android:text="@string/change" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_column="0"
            app:layout_gravity="left|top"
            app:layout_row="1"
            android:text="@string/shared_pref_2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_gravity="left|top"
            app:layout_row="1"
            android:onClick="changeData"
            android:text="@string/change" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_column="0"
            app:layout_gravity="left|top"
            app:layout_row="4"
            android:text="@string/shared_pref_3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_gravity="left|top"
            app:layout_row="4"
            android:text="@string/change"
            android:onClick="changeData" />

        <TextView
            android:id="@+id/pref2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_column="2"
            app:layout_gravity="left|center_vertical"
            app:layout_row="1"
            android:text="@string/no_value" />

        <TextView
            android:id="@+id/pref1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_column="2"
            app:layout_gravity="left|center_vertical"
            app:layout_row="0"
            android:text="@string/no_value" />

        <TextView
            android:id="@+id/pref3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_column="2"
            app:layout_gravity="left|center_vertical"
            app:layout_row="4"
            android:text="@string/no_value" />
        

        <Button
            android:id="@+id/buttonRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_gravity="left|top"
            app:layout_row="5"
            android:onClick="checkData"
            android:text="@string/verify" />

    </android.support.v7.widget.GridLayout>

</RelativeLayout>
